# task1

./: Ball.cpp  Ball.h  CMakeLists.txt  Container.cpp  Container.h  Parallelepiped.cpp  Parallelepiped.h  Shape.cpp  Shape.h  Tetrahedron.cpp  Tetrahedron.h  main.cpp  random.h  reporting note.txt
tests_out/: test1_out1.txt  test1_out2.txt  test2_out1.txt  test2_out2.txt  test3_out1.txt  test3_out2.txt  test4_out1.txt  test4_out2.txt  test5_out1.txt  test5_out2.txt  test6_out1.txt  test6_out2.txt
